fix: remove extra padding-top from wt-panel-body

--- a/src/assets/sass/wholetale-dashboard.scss
+++ b/src/assets/sass/wholetale-dashboard.scss
@@ -288,7 +288,7 @@ hr.env-separator {
 }
 
 .wt-panel .wt-panel-body {
-  padding: 1.5rem 2rem 3rem;
+  padding: 0 2rem 3rem;
 }
 .wt-panel .wt-panel-body.bg-grey,
 .wt-panel .wt-panel-header.bg-grey {
